# specs-physics

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
examples/: basic.rs  collision.rs  events.rs  hierarchy.rs  positions.rs
src/: bodies.rs  colliders.rs  events.rs  lib.rs  parameters.rs  pose.rs  positon.rs  storage.rs  storageb.rs  system_data.rs  wrappers.rs
src/systems/: mod.rs  physics_stepper.rs  stepper.rs  sync_bodies_from_physics.rs  sync_bodies_to_physics.rs  sync_colliders_to_physics.rs  sync_parameters_to_physics.rs
